add sample posts

--- a/collections/_posts/2020-10-01-probes.md
+++ b/collections/_posts/2020-10-01-probes.md
@@ -6,6 +6,7 @@ categories: News
 tags: news intia probes
 hero_image: /assets/img/posts/photoprobe.jpg
 image: /assets/img/posts/photoprobe.jpg
+abstract: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
 ---
 
 Um trotz der Corona-Pandemie eine partizipative User Research zu ermöglichen, wurden im Projekt INTIA eigene Probe Kits entwickelt, die eine Einbindung der Teilnehmenden in den Prozess trotz existierender Hygiene-Auflagen ermöglicht. Dieser Ansatz wurde im Rahmen der Mensch und Computer 2020 im Workshop „Partizipative & sozialverantwortliche Technikentwicklung“ vorgestellt und diskutiert. Diese fand zum ersten Mal vollständig digital statt mit über 800 Teilnehmenden statt. Im Diskurs mit den weiteren Workshop-Teilnehmer\*innen zeigte sich unter anderem, wie relevant die Erforschung digitaler Lösungen in der partizipativen Entwicklung ist und dass noch viele interessante Forschungsfragen und Möglichkeiten offen sind.
