--- a/collections/_posts/2020-10-01-probes.md
+++ b/collections/_posts/2020-10-01-probes.md
@@ -2,6 +2,7 @@
 published: true
 title: Probe Kits für die partizipative User Research im Projekt INTIA
 author: Marc Schmidt
+date: 10.01.2020
 categories: News
 tags: news intia probes
 hero_image: /assets/img/posts/photoprobe.jpg
