add hero image to posts and rename image to preview_image

--- a/collections/_posts/2020-10-01-probes.md
+++ b/collections/_posts/2020-10-01-probes.md
@@ -4,7 +4,8 @@ title: Probe Kits für die partizipative User Research im Projekt INTIA
 author: Marc Schmidt
 categories: News
 tags: news intia probes
-image: /assets/img/posts/photoprobe.jpg
+hero_image: /assets/img/posts/photoprobe.jpg
+preview_image: /assets/img/posts/photoprobe.jpg
 abstract: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
 ---
 
